Fixed Mission section tree clipping

--- a/assets/styles/main.sass
+++ b/assets/styles/main.sass
@@ -566,6 +566,7 @@ header
   align-items: center
   padding: 5vw 0
   z-index: 0
+  overflow: hidden
   .mission-logo
     width: 15rem
     height: 15rem
